<?xml version="1.0" encoding="UTF-8"?>

<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>info.jab.concurrency</groupId>
    <artifactId>spinner-demo</artifactId>
    <version>0.1.0-SNAPSHOT</version>

    <build>
        <plugins>
            <plugin>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.10.1</version>
                <configuration>
                    <source>19</source>
                    <target>19</target>
                    <encoding>UTF-8</encoding>
                    <enablePreview>true</enablePreview>
                    <compilerArgs>
                        <compilerArg>--add-modules</compilerArg>
                        <compilerArg>jdk.incubator.concurrent</compilerArg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M5</version>
            </plugin>


          <!-- Checkstyle -->
          <plugin>
            <groupId>org.apache.maven.plugins</groupId>
            <artifactId>maven-checkstyle-plugin</artifactId>
            <version>3.1.2</version>
            <dependencies>
              <dependency>
                <groupId>com.puppycrawl.tools</groupId>
                <artifactId>checkstyle</artifactId>
                <version>10.1</version>
              </dependency>
            </dependencies>
            <configuration>
              <!-- https://github.com/checkstyle/checkstyle/blob/master/src/main/resources/google_checks.xml -->
              <configLocation>src/main/checkstyle/google_checks.xml</configLocation>
              <suppressionsLocation>src/main/checkstyle/checkstyle-suppressions.xml</suppressionsLocation>
              <includeTestSourceDirectory>true</includeTestSourceDirectory>
              <encoding>UTF-8</encoding>
              <consoleOutput>true</consoleOutput>
              <failsOnError>true</failsOnError>
              <violationSeverity>warning</violationSeverity>
              <failOnViolation>true</failOnViolation>
              <maxAllowedViolations>0</maxAllowedViolations>
              <linkXRef>false</linkXRef>
            </configuration>
            <executions>
              <execution>
                <id>validate</id>
                <phase>validate</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

          <plugin>
            <groupId>com.hubspot.maven.plugins</groupId>
            <artifactId>prettier-maven-plugin</artifactId>
            <version>0.17</version>
            <configuration>
              <prettierJavaVersion>1.6.1</prettierJavaVersion>
              <printWidth>120</printWidth>
              <tabWidth>4</tabWidth>
              <useTabs>false</useTabs>
              <ignoreConfigFile>true</ignoreConfigFile>
              <ignoreEditorConfig>true</ignoreEditorConfig>
              <!-- Use <inputGlobs> to override the default input patterns -->
              <inputGlobs>
                <!-- These are the default patterns, you can omit <inputGlobs> entirely unless you want to override them -->
                <inputGlob>src/main/java/**/*.java</inputGlob>
                <inputGlob>src/test/java/**/*.java</inputGlob>
              </inputGlobs>
            </configuration>
            <executions>
              <execution>
                <phase>validate</phase>
                <goals>
                  <goal>check</goal>
                </goals>
              </execution>
            </executions>
          </plugin>

            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.2.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <mainClass>info.jab.demos.SpinnerDemo3</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>
